update root file

--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_key
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
 EMAIL_USER=yourgmail@gmail.com
-EMAIL_PASS=your_app_password
-NOTIFY_EMAIL=your_notify_email@domain.com
+EMAIL_PASS=your-app-password
+NOTIFY_EMAIL=recipient@example.com
